--- a/assignment/tool/src/webapp/vm/assignment/chef_assignments_student_view_assignment.vm
+++ b/assignment/tool/src/webapp/vm/assignment/chef_assignments_student_view_assignment.vm
@@ -7,7 +7,7 @@
     });
 </script>
 
-#set ($submissionType = $assignment.getContent().getTypeOfSubmission())
+#set ($submissionType = $assignment.TypeOfSubmission)
 #set($allowUpdateAssignment=$!service.allowUpdateAssignment($assignmentReference))
 <div class="portletBody">
 		<h3>
@@ -32,7 +32,7 @@
 					$tlang.getString("gen.open")
 				</th>
 				<td>
-					$assignment.OpenTime.toStringLocalFull()
+					$assignment.OpenDate.toString()
 				</td>
 			</tr>
 			<tr>
@@ -40,7 +40,7 @@
 					$tlang.getString("viewassig.datcre")
 				</th>
 				<td>
-					$assignment.TimeCreated.toStringLocalFull()
+					$assignment.TimeCreated.toString()
 				</td>
 			</tr>
 			<tr> 
@@ -48,8 +48,8 @@
 					$tlang.getString("gen.due")
 				</th>
 				<td>
-                    #if ($assignment.getContent().getHideDueDate() != "true" || $!allowUpdateAssignment)
-                        $!assignment.dueTime.toStringLocalFull()
+                    #if ($assignment.HideDueDate || $!allowUpdateAssignment)
+                        $!assignment.DueDate.toString()
                     #end
 				</td>
 			</tr>
@@ -61,14 +61,14 @@
 					$assignment.TimeLastModified.toStringLocalFull()
 				</td>
 			</tr>
-			#set ($closeDate = $assignment.getCloseTime())
+			#set ($closeDate = $assignment.CloseDate)
 			#if ($!closeDate)
 				<tr> 
 					<th>
 						$tlang.getString("gen.acesubunt")
 					</th>
 					<td>
-						$assignment.CloseTime.toStringLocalFull()
+						$closeDate.toString()
 					</td>
 				</tr>
 			#end
@@ -101,7 +101,7 @@
                                         $tlang.getString("gen.groupassignment")
                                 </th>
                                 <td>
-                                        #if ($assignment.isGroup())
+                                        #if ($assignment.IsGroup)
                                         $tlang.getString("gen.yes")
                                         #else
                                         $tlang.getString("gen.no")
@@ -113,10 +113,10 @@
 					$tlang.getString("gen.gra")
 				</th>
 				<td>
-					#set ($gradeScale = $assignment.getContent().getTypeOfGradeString())
+					#set ($gradeScale = $assignment.TypeOfGrade)
 					$gradeScale
-					#if ($gradeTypeTable.get($assignment.getContent().getTypeOfGrade()) == $!tlang.getString("points"))
-						($tlang.getString("grade.max") $assignment.getContent().getMaxGradePointDisplay())
+					#if ($gradeTypeTable.get($assignment.TypeOfGrade) == $!tlang.getString("points"))
+						($tlang.getString("grade.max") $assignment.MaxGradePoint)
 					#end
 				</td>
 			</tr>
@@ -125,10 +125,10 @@
 					$tlang.getString("gen.honple")
 				</td>
 				<td> 
-					#if ($assignment.getContent().HonorPledge == 1)
-						$tlang.getString("gen.no")
-					#else
+					#if ($assignment.HonorPledge)
 						$tlang.getString("gen.yes")
+					#else
+						$tlang.getString("gen.no")
 					#end
 				</td>
 			</tr>
@@ -137,15 +137,15 @@
 			$tlang.getString("gen.assinf")
 		</h4>
 		<p>					
-			#if ($assignment.getContent().getInstructions().length()>0)
-				$validator.escapeHtmlFormattedText($assignment.getContent().getInstructions())
+			#if ($assignment.Instructions.length()>0)
+				$validator.escapeHtmlFormattedText($assignment.Instructions)
 			#end
 		</p>
 		## assignment attachment
 		#set ($size = 0)
 		#set ($props = false)
-		#foreach ($attachment in $assignment.getContent().getAttachments()) 
-			#set ($props = $attachment.Properties) 
+		#foreach ($attachment in $assignment.Attachments)
+			#set ($props = $attachment.Properties)
 			#if ($!props)
 				#set ($size = $size + 1)
 			#end
@@ -157,7 +157,7 @@
 				$tlang.getString("gen.addres2")
 			</h4>	
 			<ul class="attachList">
-				#foreach ($attachment in $assignment.getContent().getAttachments()) 
+				#foreach ($attachment in $assignment.Attachments)
 					#set ($props = false)
 					#set ($props = $attachment.Properties) 
 					#if ($!props)
